--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/generale-station" type="text/css"/>  -->
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet"> 
   <title>Chat!</title>
 </head>
 
