--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,12 @@
     -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/generale-station" type="text/css"/>  -->
-    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet"> 
-  <title>Chat!</title>
+  <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/generale-station" type="text/css"/>  -->
+  <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Margarine&display=swap" rel="stylesheet">
+
+  <title>SuperChat 95</title>
 </head>
 
 <body>
@@ -43,7 +45,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
+
 </body>
 
 </html>
